@@ -14,6 +14,7 @@ my @overlays = ( $base->subdir("overlay_4")->stringify, $base->subdir("overlay_5
 use File::Tempdir;
 
 my $tmpdir = File::Tempdir->new();
+my $homedir = File::Tempdir->new();
 
 my $dir = dir( $tmpdir->name );
 
@@ -24,6 +25,7 @@ $fh->flush;
 $fh->close;
 
 local $ENV{GENTOO_OVERLAY_GROUP_INI_PATH} = $dir->stringify;
+local $ENV{HOME} = $homedir->name;
 
 # FILENAME: basic.t
 # CREATED: 22/06/12 07:13:46 by Kent Fredric (kentnl) <kentfredric@gmail.com>
